--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,13 @@ jobs:
         uses: actions/configure-pages@v4
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Build
         run: npm run build
+      
+      - name: Add custom domain
+        run: echo "as210469.net" > ./dist/CNAME
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
